Remove unused buttons

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,14 +9,8 @@
 <body>
 
 <p>
-  <button id="btnStart">START RECORDING</button>
-  <br/>
-  <button id="btnStop">STOP RECORDING</button>
+  <button id="recordStart">START RECORDING</button>
 </p>
-
-<video controls></video>
-
-<video id="vid2" controls></video>
 
 </body>
 </html>
